CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SignalBox)

set(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS} )

FIND_PACKAGE(XercesC REQUIRED)
INCLUDE_DIRECTORIES(SYSTEM ${XercesC_INCLUDE_DIRS} )

# SET(CMAKE_CXX_FLAGS "-g -std=c++11 -Wall -Wextra -Wthread-safety -pedantic -Weffc++")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")

INCLUDE_DIRECTORIES( ./include )

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( tst )
