CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SignalBox)

# Detect Boost
set(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS} )

# Detect XercesC
FIND_PACKAGE(XercesC REQUIRED)
INCLUDE_DIRECTORIES(SYSTEM ${XercesC_INCLUDE_DIRS} )

# Sort out compiler flags
IF(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  SET(PLATFORM_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wthread-safety -Wpedantic -Wc++11-compat-pedantic -Weffc++")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  SET(PLATFORM_CXX_FLAGS "-std=c++11 -pthread -Wall -Wextra -Weffc++ -pedantic")
ENDIF()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PLATFORM_CXX_FLAGS}")

INCLUDE_DIRECTORIES( ./include )

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( tst )
