SET( srcs )

LIST(APPEND srcs xercesguard.cpp)
LIST(APPEND srcs xercesstringdeleter.cpp)
LIST(APPEND srcs itemid.cpp)
LIST(APPEND srcs configreader.cpp)
LIST(APPEND srcs signalheaddata.cpp)
LIST(APPEND srcs signalheadpins.cpp)
LIST(APPEND srcs signalaspect.cpp)
LIST(APPEND srcs signalhead.cpp)
LIST(APPEND srcs signalflash.cpp)
LIST(APPEND srcs mockpinmanager.cpp)
LIST(APPEND srcs mockdigitaloutputpin.cpp)
LIST(APPEND srcs signalheadfactory.cpp)
LIST(APPEND srcs controlleditemmanager.cpp)
LIST(APPEND srcs digitalinputpin.cpp)
LIST(APPEND srcs mockdigitalinputpin.cpp)

IF( pigpio_FOUND )
  LIST(APPEND srcs pigpioddigitaloutputpin.cpp)
  LIST(APPEND srcs pigpiodpinmanager.cpp)
ENDIF()

ADD_LIBRARY( signalbox ${srcs} )
